# ServerClientBoost

./: README.txt
Client/: CMakeLists.txt  README.txt  client.cpp
Server/: CMakeLists.txt  README.txt  jsonObj.h  safeMap.h  server.cpp
